[package]
name = "some-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy_renet = "0.0.10"
bevy_replicon = "=0.17.0"
clap = { version = "4.4.12", features = ["derive"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.66"
rand = "0.8.5"
serde = "1.0.193"
serde-wasm-bindgen = "0.6.3"
serde_urlencoded = "0.7.1"
tracing-subscriber = "0.3.18"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "Window",
  "Document",
  "Location",
  "WebSocket",
  "RtcDataChannel",
  "MessageEvent",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSessionDescriptionInit",
  "RtcSdpType",
  "RtcIceCandidateInit",
  "RtcIceCandidate",
  "RtcDataChannelEvent"
]

[dependencies.renet]
version = "0.0.14"
default-features = false
